     that to o.a.t.p.html.JSoupParser (TIKA-1599).

   * Removed xerces2 as a dependency (TIKA-4135).

   * Tika will look for "custom-mimetypes.xml" directly on the classpath, NOT
     under "/org/apache/tika/mime/". (TIKA-4147).

   * Return media type "text/javascript" instead of "application/javascript"
     to follow RFC-9239. (TIKA-4119).

   Other Changes/Updates

   * Upgrade PDFBox to 3.0.1 (TIKA-3347)
   
   * Deprecated AbstractParser for removal in 4.x (TIKA-4132).

   * Fix bug in DateUtils that stripped timezone information from
     incoming Calendar objects (TIKA-4126).

   * The InputStreamDigester now calculates stream length (TIKA-4016).

Release 2.9.0 - 8/23/2023

   * With user configuration, the PDFParser can now throw an EncryptedDocumentException
     for Microsoft IRM PDF containers with encrypted payloads. Separately,
     the PDFParser now throws an EncryptedDocumentException instead of an IOException
     if the security handler cannot be found (TIKA-4082).

   * Fix bug that led to duplicate extraction of macros from some OLE2 containers (TIKA-4116).

   * Parse iframe's srcdoc as an embedded file (TIKA-3109).

   * Add detection of warc.gz as a specialization of gz and parse as if a standard WARC (TIKA-4048).

   * Allow users to modify the attachment limit size in the /unpack resource (TIKA-4039)
   
   * Fixed write limit bug in RecursiveParserWrapper (TIKA-4055).

   * Add mime detection for many files with thanks to Gregory Lepore (TIKA-3992).
   
   * Fixed iWork 13 keynote detection on files with wrong extension (TIKA-4111).

Release 2.8.0 - 5/11/2023

   * Enable counting and/or parsing of incremental updates in PDFs.  This
     is an experimental feature and may change in later releases (TIKA-4017).

   * Fixed bug that prevented the the loading of CompositeExternalParser in tika-app and
     tika-server-standard. This parser will call exiftool and ffmpeg if those are installed, as was